# pptx2txt2

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: lint-and-test.yaml  python-publish.yml
src/pptx2txt2/: __init__.py
tests/: test_extract_data.py
tests/resources/: example_1.odp  example_1.pptx  example_2.odp  example_2.pptx
